tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_35.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  x := (+ (+ ((r + 200) + (200 DIV 1223))));
               p := ((+ (+ (200 MOD 200))) = (((+ 2) * (1 + 1223)) DIV (- (z + 1))));
               z := (+ (((- 2) - (200 - 1223)) DIV ((+ x) + (1 MOD z))));
               q := ((~ ((- 200) > (x + 2))) & (((~ r) & (0 > 2)) OR ((0 + 200) >= (- 1223))));
               p := ((+ ((1223 DIV x) MOD (0 DIV x))) = (((- z) DIV (- 0)) MOD ((+ 1223) * (- 2))));
               r := ((((0 DIV 1) * (y - 200)) + ((1223 + y) * (1 * 1))) # (((- 0) - (y DIV 0)) * ((0 DIV y) + (200 - 2))));
               x := ((- ((z DIV 1) - (+ 2))) DIV (((2 DIV 200) - (0 + 1)) MOD (- (1 * x))));
               z := (- ((+ (1 + y)) DIV ((- y) MOD (+ 2))));
               y := ((((y MOD z) MOD (- 0)) + ((0 * 1) + (1223 * 1223))) - (- ((200 + y) * (+ y))));
               z := ((((+ 1) DIV (1 * 200)) * ((x MOD 1223) * (1 + 1))) DIV ((+ (+ 2)) - (- (1 DIV y))))
END Test11.